
  * debian/control:
    + [NT] (Build-)Dependency changes.
      - xz-lzma is now preferred to lzma as Build-Dependency
      - Added depends on libdpkg-perl
      - Reduced dpkg-dev to a suggests, we can use libdpkg-perl as
        fallback.
      - Explicitly depends on bzip2 to always support bz2 source packages.
      - Added xz-utils as suggests - needed for .xz source packages.

  * frontend/lintian:
    + [NT] Allow some options to be put into the lintianrc file.
      (Closes: #460350)
    + [NT] Added --no-cfg option that can be specified if no config
      file should be read.
    + [NT] Deprecated --checksums (also known as --md5sums and -m).
      Lintian will now always verify the checksums in changes files.
      The options will be accepted with a warning for now, but may
      be removed in a later release.  (Closes: #629453)
    + [NT] Fixed an issue where fail was called before it was
      available.  Thanks to Toby Corkindale for the report.
      (Closes: #630560, LP: #797553)

  * lib/Lintian/Tags.pm:
    + [NT] Fixed a flaw in logic that gave incorrect results for
      architecture dependent overrides.  Thanks to Andreas Beckmann for
      the report and the patch.  (Closes: #626587)

  * man/lintian.pod.in:
    + [NT] Mentioned that --checksums and aliases are deprecated.
  
  * unpack/list-srcpkg:
    + [ADB] Don't rely on the order of fields in the Sources file.  The
      files produced by the Debian archive no longer follow the order
      which the code previously assumed, and we shouldn't assume that
      the order won't change again in the future.  (Closes: #626597)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Fri, 13 May 2011 20:20:51 +0100

lintian (2.5.0) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - duplicate-files
      - format-3.0-but-debian-changes-patch
      - extended-description-contains-empty-paragraph
      - git-patches-not-exported

  * checks/binaries: